--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <header>
       <div class="container">
         <div class="logo">LOGO</div>
+        <a href="https://www.youtube.com/feed/subscriptions" target="_blank"
+          ><img src="fotos/logo.png" alt="fotologo"
+        /></a>
         <div class="menu">MENU</div>
       </div>
     </header>
