--- a/index.html
+++ b/index.html
@@ -9,11 +9,21 @@
   <body>
     <header>
       <div class="container">
-        <div class="logo">LOGO</div>
-        <a href="https://www.youtube.com/feed/subscriptions" target="_blank"
-          ><img src="fotos/logo.png" alt="fotologo"
-        /></a>
-        <div class="menu">MENU</div>
+        <div class="logo">
+          <a href=""><img src="fotos/logo.png" alt="fotologo" /></a>
+        </div>
+        <div class="menu">
+          <nav>
+            <ul>
+              <li class="active"><a href="">HOME</a></li>
+              <li><a href="">HOME</a></li>
+              <li><a href="">HOME</a></li>
+              <li><a href="">HOME</a></li>
+              <li><a href="">HOME</a></li>
+              <li><a href="">HOME</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
   </body>
