--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
       </div>
     </header>
     <section id="banner">
-
-
-
+      <div class="container column">
+        <div class="banner_headline">
+          <h1>Top notch experience</h1>
+          <h2>
+            Medicenter is a responsive template perfect for all screen sizes.
+          </h2>
+        </div>
+        <div class="banner_options">quadrados</div>
+      </div>
     </section>
   </body>
 </html>
