--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
             Medicenter is a responsive template perfect for all screen sizes.
           </h2>
         </div>
-        <div class="banner_options">quadrados</div>
+        <div class="banner_options">
+          <div class="banner1">...</div>
+          <div class="banner2">...</div>
+          <div class="banner3">...</div>
+        </div>
       </div>
     </section>
   </body>
