--- a/index.html
+++ b/index.html
@@ -35,9 +35,27 @@
           </h2>
         </div>
         <div class="banner_options">
-          <div class="banner1">...</div>
-          <div class="banner2">...</div>
-          <div class="banner3">...</div>
+          <div class="banner1">
+            <div class="banner_title">Emergency Case</div>
+            <div class="banner_desc">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            </div>
+            <a href="">Read more</a>
+          </div>
+          <div class="banner2">
+            <div class="banner_title">Doctors Timetable</div>
+            <div class="banner_desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+            <a href="">Read more</a>
+          </div>
+          <div class="banner3">
+            <div class="banner_title">Opening Hours</div>
+            <div class="banner_desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+            <a href="">Read more</a>
+          </div>
         </div>
       </div>
     </section>
