finalização opening hours

--- a/index.html
+++ b/index.html
@@ -51,10 +51,19 @@
           </div>
           <div class="banner3">
             <div class="banner_title">Opening Hours</div>
-            <div class="banner_desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <div class="week-main">
+              <div class="week">Monday - Friday</div>
+              <div class="week-hours">08:00 - 17:00</div>
             </div>
-            <a href="">Read more</a>
+            <div class="Saturday-main">
+              <div class="Saturday">Saturday</div>
+              <div class="Saturday-hours">09:30 - 17:30</div>
+            </div>
+            <div class="sunday-main">
+              <div class="sunday">Friday</div>
+              <div class="sunday-hours">09:30 - 15:00</div>
+            </div>
+            </div>
           </div>
         </div>
       </div>
