--- a/index.html
+++ b/index.html
@@ -68,5 +68,23 @@
         </div>
       </div>
     </section>
+    <section id="geral">
+      <div class="container">
+      <section>
+...
+      </section>
+
+      <aside>
+        <div class="widget">
+          <div class="widget_title">
+            <div class="wigted_title_text">Deparments</div>
+            <div class="wigted_title_bar"></div>
+          </div>
+        </div>
+....
+      </aside>
+
+      </div>
+    </section>
   </body>
 </html>
