--- a/index.html
+++ b/index.html
@@ -71,7 +71,14 @@
     <section id="geral">
       <div class="container">
       <section>
-...
+        <div class="widget">
+          <div class="widget_title">
+            <div class="wigted_title_text">Latest New</div>
+            <div class="wigted_title_bar"></div>
+          </div>
+          <div class="widget_body">
+            ....
+          </div>
       </section>
 
       <aside>
@@ -80,10 +87,20 @@
             <div class="wigted_title_text">Deparments</div>
             <div class="wigted_title_bar"></div>
           </div>
+          <div class="widget_body">
+            ....
+          </div>
         </div>
-....
+        <div class="widget">
+          <div class="widget_title">
+            <div class="wigted_title_text">Make An Appointment</div>
+            <div class="wigted_title_bar"></div>
+          </div>
+          <div class="widget_body">
+            ....
+          </div>
+        </div>
       </aside>
-
       </div>
     </section>
   </body>
