--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
             <div class="wigted_title_bar"></div>
           </div>
           <div class="widget_body">
-            ....
+            <article>
+              <div class="news_data">
+                <div class="news_posted_at">01 JAN 23</div>
+                <div class="news_comments">2</div>
+              </div>
+            </article>
           </div>
       </section>
 
