--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                 <div class="news_posted_at">01 JAN 23</div>
                 <div class="news_comments">2</div>
               </div>
+              <div class="news_thumbnail">
+                <img src="fotos/site.jpg" alt="">
+              </div>
             </article>
           </div>
       </section>
