--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
                 <div class="news_comments">2</div>
               </div>
               <div class="news_thumbnail">
-                <img src="fotos/site.jpg" alt="">
+                <img src="fotos/novamedicenter.jpg" alt="foto_medico">
+              </div>
+              <div class="news_title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+              <div class="news_resume">
+                The New York Times é um jornal diário estadunidense, fundado e publicado continuamente em Nova York desde 18 de Setembro de 1851, pela The New York Times Company. O The New York Times ganhou 117 prémios Pulitzer, mais do que qualquer outra organização de notícias.
               </div>
             </article>
           </div>
