--- a/index.html
+++ b/index.html
@@ -92,6 +92,52 @@
                 </div>
               </a>
             </article>
+            <article>
+              <a href="">
+                <div class="news_data">
+                  <div class="news_posted_at">01 JAN 23</div>
+                  <div class="news_comments">2</div>
+                </div>
+                <div class="news_thumbnail">
+                  <img src="fotos/novamedicenter.jpg" alt="foto_medico">
+                </div>
+                <div class="news_title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                <div class="news_resume">
+                  The New York Times é um jornal diário estadunidense, fundado e publicado continuamente em Nova York desde 18 de Setembro de 1851, pela The New York Times Company. O The New York Times ganhou 117 prémios Pulitzer, mais do que qualquer outra organização de notícias.
+                </div>
+              </a>
+            </article>
+            <article>
+              <a href="">
+                <div class="news_data">
+                  <div class="news_posted_at">01 JAN 23</div>
+                  <div class="news_comments">2</div>
+                </div>
+                <div class="news_thumbnail">
+                  <img src="fotos/novamedicenter.jpg" alt="foto_medico">
+                </div>
+                <div class="news_title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                <div class="news_resume">
+                  The New York Times é um jornal diário estadunidense, fundado e publicado continuamente em Nova York desde 18 de Setembro de 1851, pela The New York Times Company. O The New York Times ganhou 117 prémios Pulitzer, mais do que qualquer outra organização de notícias.
+                </div>
+              </a>
+            </article>
+            <article>
+              <a href="">
+                <div class="news_data">
+                  <div class="news_posted_at">01 JAN 23</div>
+                  <div class="news_comments">2</div>
+                </div>
+                <div class="news_thumbnail">
+                  <img src="fotos/novamedicenter.jpg" alt="foto_medico">
+                </div>
+                <div class="news_title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
+                <div class="news_resume">
+                  The New York Times é um jornal diário estadunidense, fundado e publicado continuamente em Nova York desde 18 de Setembro de 1851, pela The New York Times Company. O The New York Times ganhou 117 prémios Pulitzer, mais do que qualquer outra organização de notícias.
+                </div>
+              </a>
+            </article>
+
           </div>
       </section>
 
