--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="wigted_title_text">Latest New</div>
             <div class="wigted_title_bar"></div>
           </div>
-          <div class="widget_body">
+          <div class="widget_body flex">
             <article>
               <a href="">
                 <div class="news_data">
