--- a/index.html
+++ b/index.html
@@ -163,5 +163,26 @@
       </aside>
       </div>
     </section>
+    <footer>
+      <div class="container">
+        <div class="footer_menu">
+          <div class="fm_1">....</div>
+          <div class="fm_2">....</div>
+          <div class="fm_3">....</div>
+
+        </div>
+</div>
+
+
+
+
+
+
+
+
+    </footer>
+
+
+
   </body>
 </html>
