--- a/index.html
+++ b/index.html
@@ -147,8 +147,17 @@
             <div class="wigted_title_text">Deparments</div>
             <div class="wigted_title_bar"></div>
           </div>
-          <div class="widget_body">
-            ....
+          <div class="widget_box1">
+            <div class="widget_body1"></div>
+            <div class="widget_body1"></div>
+          </div>
+          <div class="widget_box2">
+            <div class="widget_body2"></div>
+            <div class="widget_body2"></div>
+          </div>
+          <div class="widget_box3">
+            <div class="widget_body3"></div>
+            <div class="widget_body3"></div>
           </div>
         </div>
         <div class="widget">
@@ -157,7 +166,10 @@
             <div class="wigted_title_bar"></div>
           </div>
           <div class="widget_body">
-            ....
+            <div class="widget_body_contact_desc">Não encontrou o que procurava? Use os nossos canais de contato para tirar suas dúvidas.
+              <div>By Phone <span>1-800-643-893</span></div>
+              <div>By Email <a href="">medicenter@mail.com</a></div>
+              <div>Or <a href="">fill</a> a <a href="">form</a>   on our contact page</div>
           </div>
         </div>
       </aside>
