--- a/index.html
+++ b/index.html
@@ -137,10 +137,8 @@
                 </div>
               </a>
             </article>
-
           </div>
       </section>
-
       <aside>
         <div class="widget">
           <div class="widget_title">
@@ -176,14 +174,34 @@
       </div>
     </section>
     <footer>
-      <div class="container">
+      <div class="container flexColumn">
         <div class="footer_menu">
           <div class="fm_1">....</div>
           <div class="fm_2">....</div>
           <div class="fm_3">....</div>
-
         </div>
-</div>
+        <div class="footer_area">
+          <div class="footer_areaitem">
+            <div class="widget_title">
+            <div class="wigted_title_text">Medicenter Clinic</div>
+            <div class="wigted_title_bar"></div>
+          </div>
+        </div>
+          <div class="footer_areaitem">
+            <div class="widget_title">
+              <div class="wigted_title_text">Latest Post</div>
+              <div class="wigted_title_bar"></div>
+            </div>
+          </div>
+          <div class="footer_areaitem">
+            <div class="widget_title">
+              <div class="wigted_title_text">Latest Tweets</div>
+              <div class="wigted_title_bar"></div>
+            </div>
+          </div>
+        </div>
+        <div class="footer_copy">Copyright - Todos os direitos reservados</div>
+        </div>
     </footer>
   </body>
 </html>
