--- a/index.html
+++ b/index.html
@@ -176,9 +176,24 @@
     <footer>
       <div class="container flexColumn">
         <div class="footer_menu">
-          <div class="fm_1">....</div>
-          <div class="fm_2">....</div>
-          <div class="fm_3">....</div>
+          <a href="#">
+            <div class="fm_1">Health Insurance
+              <p class="footer_text_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <span>&#8594;</span>
+            </div>
+          </a>
+          <a href="#">
+            <div class="fm_2">Medical Records
+              <p class="footer_text_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <span>&#8594;</span>
+            </div>
+          </a>
+          <a href="#">
+            <div class="fm_3">Online Bill
+              <p class="footer_text_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <span>&#8594;</span>
+            </div>
+          </a>
         </div>
         <div class="footer_area">
           <div class="footer_areaitem">
