--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
             </div>
           </div>
         </div>
-        <div class="footer_copy">Copyright - Todos os direitos reservados</div>
+        <div class="footer_copy">
+        <span>&#169;</span>
+        Copyright - Todos os direitos reservados</div>
         </div>
     </footer>
   </body>
