--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
             <div class="widget_title">
             <div class="wigted_title_text">Medicenter Clinic</div>
             <div class="wigted_title_bar"></div>
+            <p class="footer_text_final">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
           </div>
         </div>
           <div class="footer_areaitem">
