--- a/index.html
+++ b/index.html
@@ -200,7 +200,26 @@
             <div class="widget_title">
             <div class="wigted_title_text">Medicenter Clinic</div>
             <div class="wigted_title_bar"></div>
-            <p class="footer_text_final">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+          </div>
+          <div class="medicenter">
+           <div class="a">
+            <p>Mauris adipisicing mauris fringilla turpis interdum sed pulvinar nisi malesuada individual.</p>
+           </div>
+           <div class="b">
+            <p>Medicenter Clinic</p>
+        </div>                          
+       <div class="c">
+            <p>33 Farlane Street</p>
+            <p>+123 655 655</p>
+       </div>                                
+       <div class="d">
+            <p>Keilor East</p>
+            <p>+123 755 755</p>
+       </div>
+       <div class="e">
+            <p>VIC 3033, Australia</p>
+            <p style="color: white;"><Strong>medicenter@mail.com</Strong></p>
+       </div>            
           </div>
         </div>
           <div class="footer_areaitem">
