--- a/index.html
+++ b/index.html
@@ -1,75 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MEDICENTER</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <div class="logo"> 
-          <a href=""><img src="fotos/logo.png" alt="fotologo" /></a>
-        </div>
-        <div class="menu">
-          <nav>
-            <ul>
-              <li class="active"><a href="">HOME</a></li>
-              <li><a href="">HOME</a></li>
-              <li><a href="">HOME</a></li>
-              <li><a href="">HOME</a></li>
-              <li><a href="">HOME</a></li>
-              <li><a href="">HOME</a></li>
-            </ul>
-          </nav>
-        </div> 
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>MEDICENTER</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <div class="logo">
+        <a href=""><img src="fotos/logo.png" alt="fotologo" /></a>
       </div>
-    </header>
-    <section id="banner">
-      <div class="container column">
-        <div class="banner_headline">
-          <h1>Top notch experience</h1>
-          <h2>
-            Medicenter is a responsive template perfect for all screen sizes.
-          </h2>
+      <div class="menu">
+        <nav>
+          <ul>
+            <li class="active"><a href="">HOME</a></li>
+            <li><a href="">HOME</a></li>
+            <li><a href="">HOME</a></li>
+            <li><a href="">HOME</a></li>
+            <li><a href="">HOME</a></li>
+            <li><a href="">HOME</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <section id="banner">
+    <div class="container column">
+      <div class="banner_headline">
+        <h1>Top notch experience</h1>
+        <h2>
+          Medicenter is a responsive template perfect for all screen sizes.
+        </h2>
+      </div>
+      <div class="banner_options">
+        <div class="banner1">
+          <div class="banner_title">Emergency Case</div>
+          <div class="banner_desc">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          </div>
+          <a href="">Read more</a>
         </div>
-        <div class="banner_options">
-          <div class="banner1">
-            <div class="banner_title">Emergency Case</div>
-            <div class="banner_desc">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            </div>
-            <a href="">Read more</a>
+        <div class="banner2">
+          <div class="banner_title">Doctors Timetable</div>
+          <div class="banner_desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
           </div>
-          <div class="banner2">
-            <div class="banner_title">Doctors Timetable</div>
-            <div class="banner_desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </div>
-            <a href="">Read more</a>
+          <a href="">Read more</a>
+        </div>
+        <div class="banner3">
+          <div class="banner_title">Opening Hours</div>
+          <div class="week-main">
+            <div class="week">Monday - Friday</div>
+            <div class="week-hours">08:00 - 17:00</div>
           </div>
-          <div class="banner3">
-            <div class="banner_title">Opening Hours</div>
-            <div class="week-main">
-              <div class="week">Monday - Friday</div>
-              <div class="week-hours">08:00 - 17:00</div>
-            </div>
-            <div class="Saturday-main">
-              <div class="Saturday">Saturday</div>
-              <div class="Saturday-hours">09:30 - 17:30</div>
-            </div>
-            <div class="sunday-main">
-              <div class="sunday">Friday</div>
-              <div class="sunday-hours">09:30 - 15:00</div>
-            </div>
-            </div>
+          <div class="Saturday-main">
+            <div class="Saturday">Saturday</div>
+            <div class="Saturday-hours">09:30 - 17:30</div>
+          </div>
+          <div class="sunday-main">
+            <div class="sunday">Friday</div>
+            <div class="sunday-hours">09:30 - 15:00</div>
           </div>
         </div>
       </div>
-    </section>
-    <section id="geral">
-      <div class="container">
+    </div>
+    </div>
+  </section>
+  <section id="geral">
+    <div class="container">
       <section>
         <div class="widget">
           <div class="widget_title">
@@ -88,7 +90,9 @@
                 </div>
                 <div class="news_title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                 <div class="news_resume">
-                  The New York Times é um jornal diário estadunidense, fundado e publicado continuamente em Nova York desde 18 de Setembro de 1851, pela The New York Times Company. O The New York Times ganhou 117 prémios Pulitzer, mais do que qualquer outra organização de notícias.
+                  The New York Times é um jornal diário estadunidense, fundado e publicado continuamente em Nova York
+                  desde 18 de Setembro de 1851, pela The New York Times Company. O The New York Times ganhou 117 prémios
+                  Pulitzer, mais do que qualquer outra organização de notícias.
                 </div>
               </a>
             </article>
@@ -103,7 +107,9 @@
                 </div>
                 <div class="news_title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                 <div class="news_resume">
-                  The New York Times é um jornal diário estadunidense, fundado e publicado continuamente em Nova York desde 18 de Setembro de 1851, pela The New York Times Company. O The New York Times ganhou 117 prémios Pulitzer, mais do que qualquer outra organização de notícias.
+                  The New York Times é um jornal diário estadunidense, fundado e publicado continuamente em Nova York
+                  desde 18 de Setembro de 1851, pela The New York Times Company. O The New York Times ganhou 117 prémios
+                  Pulitzer, mais do que qualquer outra organização de notícias.
                 </div>
               </a>
             </article>
@@ -118,7 +124,9 @@
                 </div>
                 <div class="news_title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                 <div class="news_resume">
-                  The New York Times é um jornal diário estadunidense, fundado e publicado continuamente em Nova York desde 18 de Setembro de 1851, pela The New York Times Company. O The New York Times ganhou 117 prémios Pulitzer, mais do que qualquer outra organização de notícias.
+                  The New York Times é um jornal diário estadunidense, fundado e publicado continuamente em Nova York
+                  desde 18 de Setembro de 1851, pela The New York Times Company. O The New York Times ganhou 117 prémios
+                  Pulitzer, mais do que qualquer outra organização de notícias.
                 </div>
               </a>
             </article>
@@ -133,7 +141,9 @@
                 </div>
                 <div class="news_title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                 <div class="news_resume">
-                  The New York Times é um jornal diário estadunidense, fundado e publicado continuamente em Nova York desde 18 de Setembro de 1851, pela The New York Times Company. O The New York Times ganhou 117 prémios Pulitzer, mais do que qualquer outra organização de notícias.
+                  The New York Times é um jornal diário estadunidense, fundado e publicado continuamente em Nova York
+                  desde 18 de Setembro de 1851, pela The New York Times Company. O The New York Times ganhou 117 prémios
+                  Pulitzer, mais do que qualquer outra organização de notícias.
                 </div>
               </a>
             </article>
@@ -164,81 +174,110 @@
             <div class="wigted_title_bar"></div>
           </div>
           <div class="widget_body">
-            <div class="widget_body_contact_desc">Não encontrou o que procurava? Use os nossos canais de contato para tirar suas dúvidas.
+            <div class="widget_body_contact_desc">Não encontrou o que procurava? Use os nossos canais de contato para
+              tirar suas dúvidas.
               <div>By Phone <span>1-800-643-893</span></div>
               <div>By Email <a href="">medicenter@mail.com</a></div>
-              <div>Or <a href="">fill</a> a <a href="">form</a>   on our contact page</div>
+              <div>Or <a href="">fill</a> a <a href="">form</a> on our contact page</div>
+            </div>
           </div>
-        </div>
       </aside>
+    </div>
+  </section>
+  <footer>
+    <div class="container flexColumn">
+      <div class="footer_menu">
+        <a href="#">
+          <div class="fm_1">Health Insurance
+            <p class="footer_text_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <span>&#8594;</span>
+          </div>
+        </a>
+        <a href="#">
+          <div class="fm_2">Medical Records
+            <p class="footer_text_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <span>&#8594;</span>
+          </div>
+        </a>
+        <a href="#">
+          <div class="fm_3">Online Bill
+            <p class="footer_text_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <span>&#8594;</span>
+          </div>
+        </a>
       </div>
-    </section>
-    <footer>
-      <div class="container flexColumn">
-        <div class="footer_menu">
-          <a href="#">
-            <div class="fm_1">Health Insurance
-              <p class="footer_text_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-              <span>&#8594;</span>
-            </div>
-          </a>
-          <a href="#">
-            <div class="fm_2">Medical Records
-              <p class="footer_text_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-              <span>&#8594;</span>
-            </div>
-          </a>
-          <a href="#">
-            <div class="fm_3">Online Bill
-              <p class="footer_text_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-              <span>&#8594;</span>
-            </div>
-          </a>
-        </div>
-        <div class="footer_area">
-          <div class="footer_areaitem">
-            <div class="widget_title">
+      <div class="footer_area">
+        <div class="footer_areaitem">
+          <div class="widget_title">
             <div class="wigted_title_text">Medicenter Clinic</div>
             <div class="wigted_title_bar"></div>
           </div>
           <div class="medicenter">
-           <div class="a">
-            <p>Mauris adipisicing mauris fringilla turpis interdum sed pulvinar nisi malesuada individual.</p>
-           </div>
-           <div class="b">
-                                <p>Medicenter Clinic</p>
-                            </div>                          
-                           <div class="c">
-                                <p>33 Farlane Street</p>
-                                <p>+123 655 655</p>
-                           </div>                                
-                           <div class="d">
-                                <p>Keilor East</p>
-                                <p>+123 755 755</p>
-                           </div>
-                           <div class="e">
-                                <p>VIC 3033, Australia</p>
-                                <p style="color: white;"><Strong>medicenter@mail.com</Strong></p>
-                           </div>            
-          </div>
-        </div>
-          <div class="footer_areaitem">
-            <div class="widget_title">
-              <div class="wigted_title_text">Latest Post</div>
-              <div class="wigted_title_bar"></div>
+            <div class="a">
+              <p>Mauris adipisicing mauris fringilla turpis interdum sed pulvinar nisi malesuada individual.</p>
+            </div>
+            <div class="b">
+              <p>Medicenter Clinic</p>
+            </div>
+            <div class="c">
+              <p>33 Farlane Street</p>
+              <p>+123 655 655</p>
+            </div>
+            <div class="d">
+              <p>Keilor East</p>
+              <p>+123 755 755</p>
+            </div>
+            <div class="e">
+              <p>VIC 3033, Australia</p>
+              <p style="color: white;"><Strong>medicenter@mail.com</Strong></p>
             </div>
           </div>
-          <div class="footer_areaitem">
-            <div class="widget_title">
-              <div class="wigted_title_text">Latest Tweets</div>
-              <div class="wigted_title_bar"></div>
+
+        </div>
+        <div class="footer_areaitem">
+          <div class="widget_title">
+            <div class="wigted_title_text">Latest Post</div>
+            <div class="wigted_title_bar"></div>
+          </div>
+          <div class="widget_body_records">
+            <div class="latest_posts">
+              <a href="">
+                <p>&rarr;</p>
+                <p>Mauris adipisicing mauris fringilla turpis interdum: pulvinar nisi malesuada.<br>
+                  <span>6 years ago</span>
+                </p>
+              </a>
+            </div>
+            <div class="latest_posts">
+              <a href="">
+                <p>&rarr; </p>
+                <p>Lorem ipsum dolor sit amat velum.<br>
+                  <span>6 years ago</span>
+                </p>
+              </a>
+            </div>
+            <div class="latest_posts">
+              <a href="">
+                <p>&rarr; </p>
+                <p>Mauris adipisicing mauris fringilla turpis interdum: pulvinar nisi malesuada.<br>
+                  <span>6 years ago</span>
+                </p>
+              </a>
             </div>
           </div>
         </div>
-        <div class="footer_copy">
+        <div class="footer_areaitem">
+          <div class="widget_title">
+            <div class="wigted_title_text">Latest Tweets</div>
+            <div class="wigted_title_bar"></div>
+          </div>
+        </div>
+      </div>
+      <div class="footer_copy">
         <span>&#169;</span>
         Copyright - Todos os direitos reservados</div>
-        </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
+</body>
+
 </html>
