--- a/index.html
+++ b/index.html
@@ -271,6 +271,35 @@
             <div class="wigted_title_text">Latest Tweets</div>
             <div class="wigted_title_bar"></div>
           </div>
+          <div class="widget_body_bill">
+            <div class="latest_tweets">
+              <a href="">
+                <p>&rarr;</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur accusantium quibusdam ipsam
+                  maxime ducimus!<br>
+                  <span>4 days ago</span>
+                </p>
+              </a>
+            </div>
+            <div class="latest_tweets">
+              <a href="">
+                <p>&rarr;</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur accusantium quibusdam ipsam
+                  maxime ducimus!<br>
+                  <span>4 days ago</span>
+                </p>
+              </a>
+            </div>
+            <div class="latest_tweets">
+              <a href="">
+                <p>&rarr;</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur accusantium quibusdam ipsam
+                  maxime ducimus!<br>
+                  <span>4 days ago</span>
+                </p>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="footer_copy">
