--- a/index.html
+++ b/index.html
@@ -190,19 +190,19 @@
         <a href="#">
           <div class="fm_1">Health Insurance
             <p class="footer_text_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <span>&#8594;</span>
+            <span style="color: white;">&#8594;</span>
           </div>
         </a>
         <a href="#">
           <div class="fm_2">Medical Records
             <p class="footer_text_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <span>&#8594;</span>
+            <span style="color: white;">&#8594;</span>
           </div>
         </a>
         <a href="#">
           <div class="fm_3">Online Bill
             <p class="footer_text_menu">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <span>&#8594;</span>
+            <span style="color: white;">&#8594;</span>
           </div>
         </a>
       </div>
