--- a/index.html
+++ b/index.html
@@ -179,11 +179,10 @@
             <div class="wigted_title_bar"></div>
           </div>
           <div class="widget_body">
-            <div class="widget_body_contact_desc">Não encontrou o que procurava? Use os nossos canais de contato para
-              tirar suas dúvidas.
+            <div class="widget_body_contact_desc">Did not find what you were looking for? Use our contact channels to answer your questions.
               <div>By Phone <span>1-800-643-893</span></div>
               <div>By Email <a href="">medicenter@mail.com</a></div>
-              <div>Or <a href="">fill</a> a <a href="">form</a> on our contact page</div>
+              <div>Or to <a href="">fill</a> in a <a href="">form</a> on our contact page</div>
             </div>
           </div>
       </aside>
@@ -308,7 +307,7 @@
       </div>
       <div class="footer_copy">
         <span>&#169;</span>
-        Copyright - Todos os direitos reservados</div>
+        Copyright - Todos os direitos reservados.</div>
     </div>
   </footer>
 </body>
