--- a/index.html
+++ b/index.html
@@ -179,10 +179,11 @@
             <div class="wigted_title_bar"></div>
           </div>
           <div class="widget_body">
-            <div class="widget_body_contact_desc">Did not find what you were looking for? Use our contact channels to answer your questions.
-              <div>By Phone <span>1-800-643-893</span></div>
-              <div>By Email <a href="">medicenter@mail.com</a></div>
-              <div>Or to <a href="">fill</a> in a <a href="">form</a> on our contact page</div>
+            <div class="widget_body_contact_desc">Did not find what you were looking for? Use our contact channels to
+              answer your questions.
+              <div>By Phone <a href="#">1-800-643-893</a></div>
+              <div>By Email <a href="#">medicenter@mail.com</a></div>
+              <div>Or to <a href="#">fill</a> in a <a href="#">form</a> on our contact page</div>
             </div>
           </div>
       </aside>
@@ -233,7 +234,7 @@
             </div>
             <div class="e">
               <p>VIC 3033, Australia</p>
-              <p style="color: white;"><Strong>medicenter@mail.com</Strong></p>
+              <p style="color: white;"><Strong><a href="mailto:medicenter@mail.com">medicenter@mail.com</a></Strong></p>
             </div>
           </div>
         </div>
